latest by november 23

--- a/html/index.html
+++ b/html/index.html
@@ -102,5 +102,6 @@
     </script>
     <script src="https://unpkg.com/vue@next"></script>
     <script src="app.js"></script>
+    <script src="all.min.js"></script> <!-- assuming you've saved the file in the root -->;
  </body>
 </html>
